<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.austinhughes.speedreaderforwear.QuizActivity">

    <TextView
        android:id="@+id/quizTitle"
        android:text="Quiz"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ready?"
        android:layout_below="@+id/quizTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Begin"
        android:id="@+id/buttonBeginQuiz"
        android:layout_below="@+id/textReady"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffffff"
        android:background="#ff23272a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textChooseStory"
        android:textSize="20sp"
        android:layout_below="@+id/buttonBeginQuiz"
        android:layout_alignParentStart="true"
        android:text="Choose Story" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_below="@+id/textChooseStory"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:text="@string/Story1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Story2"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Story3"
        android:id="@+id/checkBox3"
        android:layout_below="@+id/checkBox2"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Story4"
        android:id="@+id/checkBox4"
        android:layout_below="@+id/checkBox3"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Story5"
        android:id="@+id/checkBox5"
        android:layout_below="@+id/checkBox4"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="back"
        android:id="@+id/button8"
        android:onClick="onBackButtonPressed"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="#ff23272a"
        android:textColor="#ffffffff" />


</RelativeLayout>
